plugins {
    id 'java-library'
    id 'application'
}

application {
    mainClass = 'com.justnothing.engine.repl.EvalRepl'
}

run {
    standardInput = System.in
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    implementation libs.annotations
    implementation libs.asm
    testImplementation libs.junit
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

test {
    jvmArgs += [
        '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    ]
}

